# AI_Property_Booking_concierge

./: .gitignore  AGENTS.md  CURSOR_SOFTCODE_REFACTOR_PROMPT.md  FAQ_AGENT_DOCUMENTATION.md  LICENSE  README.md  app.py  chainlit_app.py  chatbot.py  docker-compose.yml  ecosystem.config.js  env.example  execute_all_phases.py  fix_phases_123.py  fix_schema.py  initialize_faq.py  main.py  prompt.txt  pyproject.toml  replace_state_keys.py  requirements.txt  run_phases.py  streamlit_app.py  supabase_schema.sql  test_debug_endpoint.py  test_triage_bug.py
.chainlit/: config.toml
.chainlit/public/: custom.js
.github/workflows/: cd.yml  ci.yml  deploy.yml
Frontend/: tailwind.config.ts
Frontend/.next/: trace
backend/: .env  README.md  chainlit.md  chatbot.py  index.html  requirements.txt
backend/.chainlit/: config.toml
backend/infrastructure/database/rust_db_gateway/: Cargo.toml
config/: intent_catalog.yaml  retrieval.yaml  routing_policies.yaml  thresholds.yaml  vocabulary.yaml
docs/: api-reference.md  architecture.md  deployment.md  finetuning_playbook.md
frontend/: Dockerfile  chainlit.md  chainlit_app.py  requirements.txt
public/: ai-estate-chatbot.html  app.ts  custom.js  index.html
route/: booking.py  chat.py  faq.py  mobile.py  properties.py  stripe_webhook.py
rust_gateway/: Cargo.toml
rust_gateway/config/: intent_features.toml  vader_lexicon.toml
rust_gateway/src/: cache.rs  config.rs  gateway.rs  main.rs
rust_gateway/src/tools/: booking_validator.rs  fraud_check.rs  mod.rs  pricing.rs  search.rs  sentiment.rs
scripts/: execute_all_phases.py  initialize_faq.py  replace_state_keys.py
services/: agents.py  booking.py  config.py  confirmation_helpers.py  dataset_loader.py  db_client.py  db_logging.py  db_setup.py  dynamic_config.py  env.example  faq.py  faq_enhanced.py  graph.py  guardrails.py  nlp_engine.py  nlp_extractor.py  rag_pipeline.py  retrieval.py  rust_client.py  search.py  state_keys.py  tracing.py
tests/: smoke_test.py  test_confirmation_helpers.py  test_dynamic_config.py  test_faq_enhanced.py  test_intent_routing.py  test_nlp_engine.py  test_routing_policies.py  test_rust_integration.py  test_selection_routing.py  test_toon.py
(+180 files in other folders)
