[project]
name = "realtime-browser-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.111.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.30.3",
    "openai-whisper==20231117",
    "google-cloud-texttospeech==2.16.3",
    "python-multipart==0.0.9",
    "supabase==2.6.0",
    "stripe==10.7.0",
    "langgraph==0.6.7",
    "sentence-transformers==2.7.0",
    "pybind11>=3.0.1",
    "chromadb==1.1.0",
    "pandas>=2.3.2",
    "dotenv>=0.9.9",
    "pypdf2>=3.0.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langchain-chroma>=0.2.6",
    "colorama>=0.4.6",
    "psycopg[binary]>=3.2.1",
    "streamlit>=1.50.0",
    "git-filter-repo>=2.47.0",
]
